--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -5630,6 +5630,7 @@ samp {
 }
 
 body {
+    font-family: Consolas, "Courier New", "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: var(--base-color);
     font-size: 13px;
     color: var(--text);
